# CorteX-Sentinel

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  types.rs
backend/src/modules/: crtsh.rs  dorker.rs  mod.rs  shodan.rs  wayback.rs
frontend/: main.js  next.config.js  package-lock.json  package.json  preload.js  tailwind.config.js
frontend/src/components/: ExportOptions.tsx  Graph.tsx  Logo.tsx  ResultsGraph.tsx  ResultsTable.tsx  SearchForm.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/styles/: globals.css
