[package]
name = "cortex-passivemap"
version = "0.1.0"
edition = "2021"
authors = ["CorteX Club"]
description = "Ferramenta de footprint digital baseada em OSINT passivo"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
axum = { version = "0.7.3", features = ["macros"] }
tower-http = { version = "0.5.0", features = ["cors"] }
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.77"
futures = "0.3.30"
regex = "1.10.2"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
async-trait = "0.1.77"
urlencoding = "2.1.3"

[lib]
name = "cortex_passivemap"
path = "src/lib.rs"

[[bin]]
name = "cortex-passivemap"
path = "src/main.rs" 